# flutter_oboe

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: PlayAudioEngine.cpp  jni_bridge.cpp
android/src/main/kotlin/fr/cmillauriaux/flutter_oboe/: FlutterOboePlugin.kt
android/src/main/kotlin/fr/cmillauriaux/flutteroboe/: PlaybackEngine.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/fr/cmillauriaux/flutter_oboe_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_oboe.podspec
ios/Classes/: FlutterOboePlugin.h  FlutterOboePlugin.m  SwiftFlutterOboePlugin.swift
lib/: flutter_oboe.dart
test/: flutter_oboe_test.dart
